language/move-lang/tests/move_check/expansion/duplicate_struct.move
module 0x8675309::M {
    struct S {}
    struct S {}
}
